--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "nodejs-base64": "^2.0.0",
+    "nodemon": "^2.0.12",
     "sequelize": "^6.6.5"
   }
 }
